feat: add docker-compose.yml and complete project polish
- added docker-compose.yml with PostgreSQL 17.4 and pgAdmin
- added .env and .env.example for environment configuration
- completed README: Docker setup, Swagger, caching, testing, usage
- refactored DrugsControllerWebMvcTest (security config, @MockMvc, param tests)
- suppressed IntelliJ false warnings for @Autowired / @Bean / mapping methods
- verified and kept DrugsFormMapper methods used in validation
- added exception handling for invalid sortBy param
- cleaned up unused test stubs and placeholder classes
- minor code polishing and formatting